fixed bugs related to user object

--- a/wbs-web-client/src/main/java/com/senacor/wbs/web/user/CreateUserWizard$UserDetailsStep.html
+++ b/wbs-web-client/src/main/java/com/senacor/wbs/web/user/CreateUserWizard$UserDetailsStep.html
@@ -37,7 +37,7 @@
 	  </tr>
 	  <tr>
 	   <td><wicket:message key="country">Land</wicket:message></td>
-	   <td><select wicket:id="user.country"><option>Deutschland</option><option>USA</option></select></td>
+	   <td><select wicket:id="user.address.country"><option>Deutschland</option><option>USA</option></select></td>
 	  </tr>
   	  <tr>
 	   <td><wicket:message key="roleConfiguration">Konfiguration der Rollen</wicket:message></td>
